# polyclav

./: .air.toml  .gitignore  AGENTS.md  Cargo.toml  Justfile  LICENSE  Procfile  Procfile.dev  README.md  flake.nix  go.mod  go.sum  mise.toml  polyclav.example.toml  yolo-jail.jsonc
.github/: dependabot.yml
.github/workflows/: build-sfizz-linux.yml  build-sfizz-macos.yml  ci-macos.yml  ci.yml  diagnose-tap-token.yml  publish.yml
audio-core/: Cargo.toml  build.rs
audio-core/include/: polyclav_audio.h
audio-core/src/: backend_macos.rs  lib.rs  plugin_clap.rs  plugin_lv2.rs  sfizz.rs  sfizz_sys.rs
audio-core/src/dsp/: analog_delay.rs  chorus.rs  compressor.rs  drive_pedal.rs  limiter.rs  loudness.rs  mastering.rs  mod.rs  reverb.rs  saturate.rs  tremolo.rs
audio-core/src/synth/: envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs  smoother.rs  voice.rs
cmd/polyclav/: doctor.go  doctor_test.go  main.go  main_test.go  midi.go  render.go
cmd/polyclav-components/: main.go  main_test.go
cmd/polyclav-components/testdata/: example.toml
docs/: AUDITION.md  CONFIGURABILITY.md  HARDWARE_TESTS.md  INSTALL.md  LAUNCHKEY_NAVIGATION.md  MACOS_PORT.md  MIDI_IGNORE_MATCHING.md  MIDI_PROBE.md  NATIVE_SYNTH.md  OPEN_SOUND_ENGINES.md  PEDALBOARD_UI.md  PLUGIN_UI_RESEARCH.md  ROADMAP.md  USER_GUIDE.md  VELOCITY_CURVES.md  VISION.md  WEB_UI.md
docs/mockups/: pedalboard-style-a-refined-hybrid.html  pedalboard-style-b-flat-modern.html  pedalboard-style-c-hardware.html  pedalboard-ui.html  style-compare.html
internal/audio/: audio.go  audio_darwin.go  audio_linux.go  zix_link.go
internal/bootstrap/: bootstrap_test.go  download.go  sfizz.go  sfizz_test.go  spec.go
internal/config/: config.go  config_test.go  embed.go  polyclav.example.toml
internal/controls/: chain.go  controls.go  controls_test.go  hub.go  hub_test.go  macros.go
internal/controls/pages/: defs.go  hwmap.go  (+2 more)
internal/launchkey/: reconciler.go  reconciler_test.go
internal/measure/: checks.go  checks_test.go  midi.go  midi_test.go  patch.go  patch_test.go  sweep_test.go
internal/midi/: midi.go  multiplexer.go  multiplexer_test.go  picker_test.go
internal/midiprobe/: conn.go  conn_test.go  event.go  event_test.go  identity.go  identity_test.go  profile.go  session.go  session_test.go
internal/osc/: binding.go  client.go  mapper.go  reconciler.go  reconciler_test.go
internal/patches/: patches.go  patches_test.go
internal/player/: patterns.go  patterns_test.go  player.go  player_test.go  smf.go  smf_test.go
internal/state/: state.go  state_test.go
internal/supervisor/: supervisor.go
internal/velocity/: velocity.go  velocity_test.go
internal/web/: editor.go  editor_test.go  mididevices.go  mididevices_test.go  probe.go  probe_test.go  server.go  server_test.go  sse.go  sse_test.go  static.go
scripts/: README.md  build_wheel.py  components-capture.js
web/: .gitignore  .npmrc  biome.json  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vitest.config.mts
web/app/: globals.css  layout.tsx  page.tsx  usePolyclav.test.ts  usePolyclav.ts
web/components/: ConfigCard.tsx  HardwareScreen.tsx  MIDIDevicesCard.tsx  MacrosScreen.tsx  MasteringCard.tsx  ParamsCard.tsx  PatchGrid.tsx  ProbeEventLog.tsx  ProbeIdentityCard.tsx  ProbeLabelCapture.tsx  ProbePortPicker.tsx  ProbeRawSend.tsx  Section.tsx  SelectField.tsx  SliderRow.tsx  SynthCard.tsx  SynthScreen.tsx  SystemScreen.tsx  TransportCard.tsx  VelocityCard.tsx
web/lib/: api.ts  format.ts  padColors.ts  synthMerge.ts  types.ts  useSSE.ts
(+180 files in other folders)
