[package]
name = "polyclav_audio_core"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
pipewire = "0.10"
crossbeam-queue = "0.3"
# oxisynth: pure-Rust FluidSynth port. Reads SF2 and SF3 (rustysynth is SF2 only).
oxisynth = "0.1"

# sfizz (SFZ player) is an OPTIONAL backend, dlopen'd at runtime via
# libloading — the binary does NOT link it, so the build needs no sfizz and
# `.sfz` patches degrade gracefully when libsfizz is absent. clack-host also
# uses libloading (to load .clap bundles).
libloading = "0.8"

# Plugin hosts (LV2 + CLAP).
# livi is the LV2 host (wraps the lilv C library; pkg-config'd at build time).
# clack-host is the CLAP host (pure-Rust, loads .clap shared libs via libloading).
livi = "0.7"
# livi exposes `lv2_raw::LV2Urid` in its `Features` API but does not
# re-export the type, so we depend on `lv2_raw` directly. Pinned to the
# same version livi uses to avoid two copies in the build.
lv2_raw = "0.3"
clack-host = "0.1"

# Pure-Rust DSP backbone for the native synth backend (Phase 1; see
# docs/ROADMAP.md). Provides bandlimited oscillators
# (PolyBLEP), the Huovilainen Moog ladder, ADSR primitives, and
# saturation. MIT OR Apache-2.0, clean for static linking into our
# Apache 2.0 binary.
fundsp = "0.23"
